tests/ui/parser/mismatched-braces/missing-close-brace-in-trait.stderr
error: this file contains an unclosed delimiter
  --> $DIR/missing-close-brace-in-trait.rs:11:65
   |
LL | trait T {
   |         - unclosed delimiter
...
LL | fn main() {}
   |                                                                 ^

error: aborting due to previous error

